kustomizations/apps/basex-validator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basex-validator
spec:
  type: ClusterIP
  ports:
    - port: 8984
      targetPort: http
      protocol: TCP
      name: http
