kustomizations/apps/basex-validator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basex-validator
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: basex-validator
              port:
                number: 8984
